Fix for Statistics layout issues.  SHRINE 1105 in JIRA.
Former-commit-id: 0559078b46bfd3092f38b0a2d42f75d85c27aa9d
Former-commit-id: 64b917c0197fa57c749f0448a00dd315e82e5ae7

--- a/apps/dashboard-app/src/main/js/src/assets/css/shrine.css
+++ b/apps/dashboard-app/src/main/js/src/assets/css/shrine.css
@@ -206,8 +206,8 @@ table {
 }
 
 .table tr>td:first-child {
-  width: 20%;
-  min-width: 140px;
+    width: 20%;
+    min-width: 140px;
 }
 
 .table-striped>tbody>tr:nth-of-type(odd) {
@@ -678,6 +678,7 @@ textarea{
 
 .shrine-calendar-input{
     margin-right: 1px;
+    max-width:50%;
 }
 
 i.shrine-close{
