--- a/apps/steward-app/src/main/js/src/assets/css/shrine.css
+++ b/apps/steward-app/src/main/js/src/assets/css/shrine.css
@@ -678,6 +678,7 @@ textarea{
 
 .shrine-calendar-input{
     margin-right: 1px;
+    max-width:50%;
 }
 
 i.shrine-close{
